fix: features slider padding on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -599,6 +599,9 @@ section {
     max-width: 100%;
     padding: 0 15px;
   }
+  .content.no-padding {
+    padding: 0;
+  }
   section {
     padding-top: 100px;
   }
@@ -607,6 +610,7 @@ section {
   }
   .features-slider {
     margin-top: 50px;
+    padding: 0 15px;
   }
   .header-features-item {
     max-width: 250px;
@@ -614,6 +618,13 @@ section {
   }
   .features-buttons {
     margin: 0 -15px;
+  }
+  .slider-buttons button {
+    border-right: none;
+    border-left: none;
+  }
+  .slider-buttons button:last-child {
+    border-left: 1px solid rgba(235, 235, 240, 0.2);
   }
   /* Step */
   .section-title {
